# iris-model

./: .gitignore  CMakeLists.txt  README.md  data1.csv  requirements.in  vcpkg.json
data/inputs/model_in/: miami_monthly_aggregates_and_trap_count.csv  variables_2.0_0_7_180.csv
data/inputs/model_in/adaptive_release_trial_in/: miami_2019_2023_temperature_celsius.csv  model_input_config.csv  random_mcmc_carrying_capacity_100_vals.csv  surveil_data_7_days_for_non_constant.csv  surveil_data_7_days_for_non_constant_cpp_seed_controlled.csv
data/inputs/model_in/adaptive_release_trial_in/sens_constant_temp_caring_cap/: 19_23_temperature_altered.csv  surveil_data_7_days_for_non_constant_temp_cc.csv  variables_non_constant_scenario.csv
data/inputs/model_in/constant_release_trial_in/: model_input_config.csv
data/inputs/model_in/constant_release_trial_in/sens_constant_temp_cc/: Miami_carrying_capacity_dates.csv  miami_2019_2023_constant_temperature_celsius.csv  model_input_config.csv  random_mcmc_carrying_capacity_100_vals.csv
data/inputs/model_in/constant_release_trial_in/supporting_files/2020_each_month_60_day_surveillance_100_sims_vals/: April_surveillance.csv  August_surveillance.csv  December_surveillance.csv  February_surveillance.csv  January_surveillance.csv  (+8 more)
data/inputs/model_in/tests_in/: 19_23_temperature_altered.csv  variables_2019_2023_template.csv
include/: add_mosqs_function.h  mosq_vars_header.h  read_variables_from_csv.h
scripts/: clean_test_run.py  test_run.py
src/: Mosquito_Stage_2.cpp  add_mosqs_function.cpp  read_variables_from_csv.cpp
(+117 files in other folders)
